# Cardinal

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: AssumptionsPanel.tsx  BacktestView.tsx  CompsTable.tsx  DCFOutputCard.tsx  Layout.tsx  QuantDashboard.tsx  TickerSearch.tsx
frontend/src/lib/: api.ts  useDebounce.ts
frontend/src/pages/: Home.tsx  TickerPage.tsx
src/cardinal/: __init__.py  config.py
src/cardinal/api/: main.py  models.py
src/cardinal/core/: __init__.py  backtest.py  comps.py  dcf.py  quant.py
src/cardinal/data/: __init__.py  fmp_client.py  market_data.py  utils.py
tests/: conftest.py  test_api.py  test_backtest.py  test_dcf.py  test_fmp_client.py  test_market_data.py  test_quant.py
